# spatio_temporal_forecasting

./: .gitignore  AR_FNO.py  AR_diffusion.py  README.md  diffusion_emulator.py  fno_emulator.py  load_checkpoint.py  load_data.py  logger.py  loss.py  make_gif.py  pyproject.toml  train_ar_fno.py
baskerville/: README.md  script.sh  script_2.sh  tf_script.sh
notebooks/: run_physicsnemo.ipynb  run_physicsnemo.py
notebooks/configs/: config.yaml
notebooks/configs/model/: fno.yaml
notebooks/configs/training/: default.yaml
scripts/: train_ar_fno.py
src/spatio_temporal_forecasting/: AR_FNO.py  AR_diffusion.py  AutoregressiveBase.py  __init__.py  config_schema.py  constants.py  load_checkpoint.py  load_data.py  loss.py
